# crypto-price

./: Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
backend/: api.py  settings.py
backend/core/: api_v1.py  models.py
backend/core/management/commands/: import_data.py
backend/core/migrations/: 0001_initial.py
backend/core/tests/: factories.py  test_api_v1.py
